--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,16 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Mm]emoryCaptures/
+/[Bb]ancolombia/[Ll]ibrary/
+/[Bb]ancolombia//[Tt]emp/
+/[Bb]ancolombia//[Oo]bj/
+/[Bb]ancolombia//[Bb]uild/
+/[Bb]ancolombia//[Bb]uilds/
+/[Bb]ancolombia//[Ll]ogs/
+/[Bb]ancolombia//[Mm]emoryCaptures/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
-!/[Aa]ssets/**/*.meta
+!//[Bb]ancolombia/[Aa]ssets/**/*.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
